[package]
name = "telefeed"
version = "0.7.0"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2024"

[dependencies]
atom_syndication = "0.12.7"
base64 = "0.22.1"
bytes = "1.10.0"
chrono = "0.4.39"
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.25"
redis = { version = "0.29.0", features = ["tokio-comp"] }
reqwest = "0.12.12"
rss = "2.0.12"
serde = "1.0.218"
tgbot = "0.35.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.20"
