[package]
name = "telefeed"
version = "0.7.0"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2024"

[dependencies]
atom_syndication = "0.12.7"
base64 = "0.22.1"
bytes = "1.11.0"
chrono = "0.4.42"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.29"
redis = { version = "1.0.0", features = ["tokio-comp"] }
reqwest = "0.12.24"
rss = "2.0.12"
serde = "1.0.228"
tgbot = "0.40.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
